# adsbee

./: MQTT_INTEGRATION.md
contracts/mqtt/: PHASES.md  REQUIREMENTS.md  SPEC.md  mqtt_messages.proto
docs/GPS/: GNSS_Configuration_Guide.md  GNSS_Developer_Guide.md
docs/feeds/mqtt/: MQTT_CONFIGURATION.md  MQTT_OTA_GUIDE.md  MQTT_Size_Considerations.md  mqtt_ota_publisher.py
docs/firmware/UART0 Switch/: UART0_Switching_Design.md
firmware/: DEVELOPER_GUIDE.md  build.sh  compose.yml
firmware/common/: CMakeLists.txt
firmware/common/comms/: comms_reporting.cpp
firmware/common/coprocessor/: composite_array.cpp  object_dictionary.cpp  object_dictionary.hh  spi_coprocessor.cpp
firmware/common/firmware_update/: firmware_update.hh
firmware/common/gnss/: CMakeLists.txt  gnss_interface.hh  mavlink_gps_parser.cpp  mavlink_gps_parser.hh  nmea_parser.cpp  nmea_parser.hh  sbf_parser.cpp  sbf_parser.hh  ubx_parser.cpp  ubx_parser.hh
firmware/common/mqtt/: mqtt_messages.proto
firmware/common/settings/: gps_settings.hh  settings.cpp  settings.hh  settings_strs.cpp
firmware/common/utils/: cpu_utils.cpp  unit_conversions.hh
firmware/esp/: partitions.csv  sdkconfig
firmware/esp/main/: CMakeLists.txt  CMakeLists_mqtt.cmake  app_main.cpp
firmware/pico/: CMakeLists.txt
firmware/pico/application/: adsbee.cc  (+4 more)
firmware/pico/application/peripherals/: CMakeLists.txt  uart_switch.cc  uart_switch.hh
firmware/pico/application/peripherals/cc1312/: cc1312.cc
firmware/pico/application/peripherals/esp32/: esp32_flasher.cc  esp32_flasher.hh
tools/: mqtt_ota_publisher.py
(+33 files in other folders)
